[gd_scene format=3 uid="uid://bnqog2bk3p7mv"]

[ext_resource type="Script" uid="uid://b5jkgp3idbiag" path="res://battle/battle.gd" id="1_tiqy5"]
[ext_resource type="Texture2D" uid="uid://0xibjcv2bffr" path="res://monsters/pistol_shrimp/pistol_shrimp_remake.png" id="2_tiqy5"]

[node name="Battle" type="CanvasLayer" unique_id=661795331]
script = ExtResource("1_tiqy5")

[node name="Content" type="Control" parent="." unique_id=1735734365]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionButtons" type="GridContainer" parent="Content" unique_id=1288648861]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -192.0
offset_right = 624.0
offset_bottom = -16.0
grow_vertical = 0
columns = 2

[node name="Party" type="Button" parent="Content/OptionButtons" unique_id=1536864013 groups=["option_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/OptionButtons/Party" unique_id=33241065]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Party"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fight" type="Button" parent="Content/OptionButtons" unique_id=2056039398 groups=["option_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/OptionButtons/Fight" unique_id=1878537168]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Fight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Run" type="Button" parent="Content/OptionButtons" unique_id=1591535956 groups=["option_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/OptionButtons/Run" unique_id=1377270769]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Run"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item" type="Button" parent="Content/OptionButtons" unique_id=1488662084 groups=["option_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/OptionButtons/Item" unique_id=340005847]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveButtons" type="GridContainer" parent="Content" unique_id=1599325903]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -192.0
offset_right = 624.0
offset_bottom = -16.0
grow_vertical = 0
columns = 2

[node name="Button0" type="Button" parent="Content/MoveButtons" unique_id=358415546 groups=["move_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/MoveButtons/Button0" unique_id=1154774212]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="Content/MoveButtons" unique_id=1535762806 groups=["move_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/MoveButtons/Button1" unique_id=1072629768]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="Content/MoveButtons" unique_id=428295278 groups=["move_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/MoveButtons/Button2" unique_id=845959561]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="Content/MoveButtons" unique_id=85904420 groups=["move_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Content/MoveButtons/Button3" unique_id=1473716675]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="VBoxContainer" parent="Content" unique_id=720071698]
layout_mode = 0
offset_left = 32.0
offset_top = 54.0
offset_right = 416.0
offset_bottom = 470.0

[node name="LevelLabel" type="Label" parent="Content/Player" unique_id=1568394748]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Lvl.99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="Content/Player" unique_id=425096907]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Content/Player" unique_id=1951812552]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
texture = ExtResource("2_tiqy5")
expand_mode = 3
stretch_mode = 5
flip_h = true

[node name="HPBar" type="ProgressBar" parent="Content/Player" unique_id=404966868]
layout_mode = 2

[node name="EXPBar" type="ProgressBar" parent="Content/Player" unique_id=447239853]
layout_mode = 2

[node name="Enemy" type="VBoxContainer" parent="Content" unique_id=1037151586]
layout_mode = 0
offset_left = 864.0
offset_top = 54.0
offset_right = 1248.0
offset_bottom = 439.0

[node name="LevelLabel" type="Label" parent="Content/Enemy" unique_id=1192345644]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Lvl.99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="Content/Enemy" unique_id=402344739]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Content/Enemy" unique_id=1588136732]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
texture = ExtResource("2_tiqy5")
stretch_mode = 5

[node name="HPBar" type="ProgressBar" parent="Content/Enemy" unique_id=1185066293]
layout_mode = 2

[node name="Panel" type="Panel" parent="Content" unique_id=1233652202]
layout_mode = 0
offset_left = 656.0
offset_top = 528.0
offset_right = 1264.0
offset_bottom = 704.0
